# tg-anti-spam

./: .gitignore  Cargo.toml  flake.nix
src/: bot.rs  config.rs  detect.rs  main.rs  post.rs  pre.rs  state.rs
