[package]
name = "tg-anti-spam"
version = "0.1.0"
edition = "2024"

[dependencies]
teloxide = { version = "0.13", default-features = false, features = ["macros", "rustls", "ctrlc_handler"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
config = "0.14"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dashmap = { version = "6", features = ["serde"] }
gemini-rust = "1.6.1"
schemars = "1.2.0"
anyhow = "1.0.100"
chrono = "0.4"

